--- a/m-buffer-doc.org
+++ b/m-buffer-doc.org
@@ -16,7 +16,13 @@ side-effects. And, it adds some macros for cleanup, so again, helping to
 manage the process of global state where it can be avoided.
 
 
-** Caveat
+** Status
+
+`m-buffer' is a work in progress, but much of it is now stable and the
+interface should change only in forward-compatible ways for 1.0 release.
+The individual files have statements about their stability.
+
+** Caveat to Documentation
 
 This is the first version of m-buffer with full [[http://github.com/phillord/lentic][lenticular]] documentation. Both
 lentic and this documentation are a work in progress. They will improve.
@@ -31,12 +37,14 @@ matches.
 
 #+include: "m-buffer.org" :minlevel 2
 
+
 * m-buffer-at
 
 m-buffer-at.el provides a set of stateless functions which for accessing data
 about buffers, without requiring changing the `current-buffer'.
 
 #+include: "m-buffer-at.org" :minlevel 2
+
 
 * m-buffer-macro
 
@@ -46,3 +54,14 @@ m-buffer-macro.el provides some general purpose macros for:
  - running code at a specific location
 
 #+include: "m-buffer-macro.org" :minlevel 2
+
+
+* Roadmap
+
+** 0.11
+
+Full lentic documentation using lentic-server
+
+** 0.12
+
+Completion of m-buffer-at with all the core buffer functions.
